# watchdog_rs

./: .env  .gitignore  Cargo.toml  README.md  build.sh  nohup.out  watchdog_rs.yml
src/: config.rs  lib.rs  log.rs  main.rs
src/api/: client.rs  mod.rs  parsing.rs
src/git/: mod.rs  repo_url_builder.rs
src/utils/: print.rs
