[package]
name = "watchdog_rs"
version = "0.1.0"
edition = "2021"
authors = ["Floris @ xylex.ai"]
description = "Watches your git repository and automatically deploys when tests are passing"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
indicatif = "0.17.8"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.38.0", features = ["full"] }
